--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,8 +4,8 @@
     <p class="sub-title">～情報の荒波を、チームで切り拓く</p>
     <h1 class="title">MATO</h1>
     <div class="mt-4">
-      <a href="#" class="btn btn-primary me-3">新規登録</a>
-      <a href="#" class="btn btn-success">ログイン</a>
+      <%= link_to "新規登録", signup_path, class: "btn btn-primary me-3" %>
+      <%= link_to "ログイン", login_path, class: "btn btn-success" %>
     </div>
   </div>
 </div>
