いいねとコメント機能の搭載

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <h1>MATO</h1>
 <div class="cover">
   <div class="text-center">
-    <p class="sub-title">～情報の荒波を、チームで切り拓く</p>
+    <p class="sub-title">～情報の荒波を、チームで切り拓く～</p>
     <h1 class="title">MATO</h1>
     <div class="mt-4">
       <%= link_to "新規登録", signup_path, class: "btn btn-primary me-3" %>
